--- a/EDA_Automation.ipynb
+++ b/EDA_Automation.ipynb
@@ -244,9 +244,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-08-29 00:43:41,401 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,467 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,472 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,475 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,477 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,479 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,483 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,485 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,490 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,493 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,495 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,495 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,501 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,503 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,508 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,557 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,562 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,566 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,572 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,574 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,580 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,588 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,591 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,595 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,603 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,608 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,610 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,615 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,623 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,640 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,646 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,650 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,654 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,658 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,660 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,669 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,676 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,681 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,685 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,690 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,694 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,694 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,700 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,740 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,746 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,748 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,750 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,754 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,757 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,757 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,760 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,762 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,765 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,766 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,770 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,774 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,774 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,780 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,783 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,783 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,789 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,821 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,821 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,826 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,827 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,830 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,830 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,834 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,839 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,841 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,844 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,846 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,847 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,848 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,850 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,850 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,871 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,873 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,875 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,879 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,882 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,883 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,890 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,891 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,895 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,899 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,901 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,901 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,907 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,910 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,919 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,921 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,923 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,923 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,923 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,931 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,932 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,932 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,940 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,943 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,943 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,943 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,949 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,951 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,961 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,973 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,973 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,983 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,987 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,989 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,990 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,991 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,994 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,996 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,996 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:41,997 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:42,000 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:42,003 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:42,005 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:42,008 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:42,010 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:42,011 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:42,012 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:42,014 - WARNING  - findfont: Font family 'Heiti TC' not found.\n",
+      "2023-08-29 00:43:42,016 - WARNING  - findfont: Font family 'Heiti TC' not found.\n"
+     ]
+    }
+   ],
    "source": [
     "d = dtale.show(df)\n",
     "d.open_browser()"
@@ -261,13 +393,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ddbaf3befcda459ab0b97de1d36ccac1",
+       "model_id": "741df2e4b4d54ec39fb189a46204653b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -291,6 +423,13 @@
     "analysis = sweetviz.analyze([df,'Travel'])\n",
     "analysis.show_html('Report.html')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
